Added link extraction and link table
